--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "start": "node ./build/server.js"
+    "start": "node ./build/server.js",
+    "postbuild": "cp .env ./build/.env"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.3",
