--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "start": "node ./build/server.js",
-    "postbuild": "cp .env ./build/.env"
+    "start": "node ./build/server.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.3",
