--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,6 +16,7 @@ phases:
 
 artifacts:
   files:
+    - './build/**/*'
     - './**/*'
   name: build-demo2-artifacts
-  base-directory: 'build'
+  base-directory: '.\build'
