change post build script

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,7 +12,7 @@ phases:
 
   post_build:
     commands:
-          - cd ./build && npm install --production
+          - cd ./build && npm install
 
 artifacts:
   files:
